feat: Add wheel selector and game animations
Introduces a spinning wheel component to select games randomly and adds fade-in animations for UI elements. Also improves audio handling by adding error listeners and suppressing console logs for failed auto-plays.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             },
             animation: {
               'pulse-fast': 'pulse 0.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'fade-in': 'fadeIn 0.5s ease-out forwards',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              }
             }
           },
         },
